--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
-  
   "dependencies": {
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "gatsby": "^2.1.29",
+    "gatsby-cli": "^2.4.15",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.9",
