--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "deploy": "gatsby build && gh-pages -d public -b master",
   },
   "dependencies": {
     "css-loader": "^2.1.1",
